# SDL_example

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cmake/: FindFFMPEG_BUILD.cmake
src/common/: common_header.h
src/ex1/: HelloWorld.cpp  Makefile  cmake_install.cmake
src/ex4/: CMakeLists.txt  Makefile  cmake_install.cmake  video_thread.cpp
src/ex5/: CMakeLists.txt  Makefile  cmake_install.cmake  sync_video.bc  sync_video.cpp  sync_video.edge.bc
src/ffmpeg/: CMakeLists.txt  ffmpeg.cpp
src/gtk/: CMakeLists.txt  HelloWorld2.cpp  Makefile  cmake_install.cmake  main.cpp
src/lib/: .decoder.cpp.swp  CMakeLists.txt  Makefile  MyQueue.cpp  MyQueue.h  cmake_install.cmake  decoder.cpp  decoder.h  main.cpp  ptr_deleter.h
