find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})

get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
#foreach(dir ${dirs})
#     message(STATUS "dir='${dir}'")
#endforeach()
MESSAGE( STATUS "CMAKE_C_FLAGS: " ${CMAKE_CXX_FLAGS})
#set( NATIVE_WINDOW "test" CACHE STRING "222" )
option(NATIVE_WINDOW "USE NATIVE WINDOW" OFF)
if(NATIVE_WINDOW)
   MESSAGE("Use NATIVE_WINDOW")
   add_definitions(-DNATIVE_WINDOW)
endif()
add_executable(Syncvideo  sync_video.cpp)
target_link_libraries(Syncvideo ${LIBRARIES} ${GTK3_LIBRARIES})
set_target_properties(Syncvideo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

